fixed mina3 min6 overflow

--- a/src/styles/main3Styles.css
+++ b/src/styles/main3Styles.css
@@ -1,6 +1,6 @@
 .Main3 {
   height: 46.722rem;
-
+  overflow-x: hidden;
   background-color: var(--doro-super-light-grey);
 }
 
@@ -10,6 +10,7 @@
   margin-right: auto;
   padding-top: 8.444rem;
   padding-left: 20.694rem;
+
   background-color: var(--doro-super-light-grey);
 }
 
