--- a/src/styles/main6Styles.css
+++ b/src/styles/main6Styles.css
@@ -1,13 +1,15 @@
 .Main6 {
   height: 63.222rem;
-  width: 106.667rem;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 15.556rem;
+
+  overflow-x: hidden;
 }
 
 .Main6-content-container {
   margin-left: 20.694rem;
+  width: 106.667rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 15.556rem;
 }
 
 .Main6-top-container {
